--- a/First Code Class.ipynb
+++ b/First Code Class.ipynb
@@ -35,8 +35,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "da4780f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shout out to the world that khodeejah is a maa shaa Allaah sister\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('shout out to the world that khodeejah is a maa shaa Allaah sister')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f01fbe9a",
    "metadata": {},
    "outputs": [],
    "source": []
